# rust-challenges

./: Cargo.toml  README.md
challenges/c01/: Cargo.toml  README.md
challenges/c01/src/: main.rs
challenges/c02/: Cargo.toml
challenges/c02/src/: lib.rs
challenges/c03/: .gitignore  Cargo.toml  count_a.py  gen.py
challenges/c03/src/: main.rs
