[package]
name = "c01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
futures = "0.3.30"
indicatif = "0.17.8"
ring = "0.17.8"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = [ "fs" ] }
tokio-util = "0.7.11"
